dot format output