@@ -5,15 +5,17 @@ import in.lakazatong.pcbmod.redstone.parser.Structure;
 
 import java.io.IOException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class Main {
     public static void main(String[] args) throws IOException {
-        Structure structure = Structure.fromNBT(Path.of("common/src/main/java/in/lakazatong/pcbmod/redstone/parser/examples/and_gate/and_gate.nbt"));
+        String wd = Paths.get("common/src/main/java/in/lakazatong/pcbmod/redstone/parser/examples/and_gate").toAbsolutePath().toString();
+
+        Structure structure = Structure.fromNBT(Path.of(wd, "and_gate.nbt"));
         System.out.println(structure);
 
         Parser p = new Parser(structure);
-        Object G = p.parse();
-
-        System.out.println(G);
+        p.parse();
+        p.saveGraphAsDot(Path.of(wd, "and_gate.dot"));
     }
 }
